force-app/main/default/objects/LeanData__LD_JSON_Search__c/LeanData__LD_JSON_Search__c.object-meta.xml
<CustomObject>
    <label>LD JSON Search</label>
    <nameField>
        <label>LD JSON Search</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LD JSON Searches</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>