force-app/main/default/objects/LeanData__LD_JSON_Search__c/fields/LeanData__Search_Key_1__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Search_Key_1__c</fullName>
    <label>Search Key 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>