force-app/main/default/objects/LeanData__LD_JSON_Search__c/fields/LeanData__Value_5__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Value_5__c</fullName>
    <label>Value 5</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>